crates/squealy-macros/tests/compile_fail/column_type_rejects_unsupported_attribute.rs
use squealy::*;

#[derive(ColumnType)]
#[column_type(foo = "bar")]
struct UserId(i32);

fn main() {}
